--- a/jsconfig.json
+++ b/jsconfig.json
@@ -23,6 +23,9 @@
       "@/*": [
         "./src/*"
       ],
+      "@public/*": [
+        "public/*"
+      ],
       "@components/*": [
         "src/components/*"
       ],
